# codespace_play

./: .gitignore  README.md  cool.ipynb  filename  loading_indicator_abc.py  loading_indicator_callbacks.py  simuneal.ipynb  test.py  test2.py  typist.py  urls.txt  zmqer.py
asy_dl/: pyproject.toml
dere/: README.md  pyproject.toml  test.yml
dere/dere/services/: __init__.py  manager.py  service.py
dere/tests/: test_ServiceManager.py
dizzy/: README.md  TODO.md  pyproject.toml
dizzy/dizzy/: __init__.py  __main__.py  daemon.py  entity.py  service.py  settings.py
dizzy/dizzy/daemon/: __init__.py  __main__.py  client.py  gen.py  server.py  settings.py
dizzy/dizzy/simple_service/: sometasks.py  uno.yml
dizzy/tests/: test_gen.py  test_service.py
experiments/: autotypy.py  gentree.py  herojourn.py  qisto.py  tiny_312_validator.py
experiments/asy_dl/: pyproject.toml
experiments/asy_dl/asy_dl/: __main__.py
experiments/cmds/: pyproject.toml
experiments/cmds/cmds/: __main__.py  cm1.py  cm2.py  commands.json
experiments/geecli/: README.md  setup.py
experiments/geecli/data/: Conversation-2023-10-03 05:42:36.active.yaml  conversation-created.yaml  prompts_bin.db
experiments/geecli/geecli/: binmanager.py  cmdli.py
experiments/indicator/: __main__.py  loading_indicator.py  pyproject.toml
experiments/indicator/indicator/: __init__.py  spinner.py
experiments/look/: go.mod  main.go
experiments/look/python/: main.ipynb
experiments/my_abcs/: collective.ipynb
experiments/predictor/: pred.py
experiments/predictor/nn_model/: main.cu
experiments/qm/: quasi.ipynb
experiments/simuneal/: pyproject.toml
experiments/syncope/: pyproject.toml
experiments/syncope/syncope/: __main__.py
experiments/webdownloader/: Continuous_optimization  Dynamic_programming  pyproject.toml
geecli/: pyproject.toml
geecli/geecli/: __main__.py  binmanager.py  cmdli.py  prompt.py  utils.py
gematrick/: pyproject.toml
gematrick/gematrick/: __init__.py  __main__.py  bookdata.py
gematrick/tests/: test_basic.py
indicator/: __main__.py  loading_indicator.py  loading_indicator_callbacks.py
indicator/abc_indicator/: __init__.py  indicator.py  percentage.py  spinner.py
indicator/indicator/: braille.py  indicator.py  percentage.py
sandbox/: batchalgo.py  combat.py  cursed_curry.ipynb  hash_fs.py
syncope/syncope/: __main__.py
webdownloader/: Mathematical_optimization  urls.txt
webdownloader/webdownloader/: __main__.py
zmqer/zmqer/: __main__.py  misc.py  peer.py
zmqer/zmqer/misc/: __init__.py
zmqer/zmqer/peer/: __init__.py  __main__.py  base.py  group.py  json.py  workload.py
(+23 files in other folders)
