[tool.poetry]
name = "webdownloader"
version = "0.1.0"
description = ""
authors = ["Grayson <grayson.miller124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
bs4 = "^0.0.1"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
wdlr = "webdownloader.__main__:main"
